# comtrade-downloader

./: .gitignore  Comtrade_Compactor.ipynb  README.md  country_inclusion.ipynb  download_latest.py  downloader.py  downloader_backlog.txt  pyproject.toml  run_latest.sh  utils.ipynb
archive/: downloader.ipynb
archive/.ipynb_checkpoints/: downloader-checkpoint.ipynb
comtrade_script_download_reports/: scron_download_error.txt
comtrade_script_download_reports/.ipynb_checkpoints/: scron_download_error-checkpoint.txt  scron_download_output-checkpoint.txt
downloader/: .comtrade_api_key  .comtrade_api_key.swp  main.py  run_compactor_for_converted.py  run_downloader.py  run_downloader_as_reported.py  run_downloader_by_classification.py  user_config.py
downloader/config/: constants.py  user_config.py
downloader/data/conversion_weights/: conversion_weights_H0_to_H1.csv  conversion_weights_H1_to_H0.csv  conversion_weights_H1_to_H2.csv  conversion_weights_H2_to_H3.csv  conversion_weights_H3_to_H4.csv  conversion_weights_H4_to_H3.csv  conversion_weights_H4_to_H5.csv  conversion_weights_S1_to_S2.csv  conversion_weights_S2_to_S1.csv  conversion_weights_S2_to_S3.csv  conversion_weights_S3_to_H0.csv  conversion_weights_S3_to_S2.csv  grouped_H0:S3.csv  grouped_H2:H1.csv  grouped_H3:H2.csv  grouped_H5:H4.csv  grouped_S2:S1.csv
downloader/data/static/: constants.py
downloader/src/: api_downloader.py  compactor.py  comtrade_file.py  concordance_table.py  configure_downloader.py  converter.py  downloader.py  file_converter.py  utils.py
downloader/src/download/: api_downloader.py  (+4 more)
(+1 files in other folders)
